admin: prevent the overflow of the feedback tooltip content

--- a/admin/src/components/shared/FeedbackButton/FeedbackButton.css
+++ b/admin/src/components/shared/FeedbackButton/FeedbackButton.css
@@ -40,11 +40,12 @@
 
 .feedbackTooltip .tooltipContent {
 	font-size: 12px;
-	padding: 30px 50px 30px 30px;
+	padding: 30px;
 	position: relative;
 	box-shadow: var(--sl-shadow-x-large);
 	display: flex;
 	gap: 12px;
+	overflow: auto;
 }
 
 .feedbackTooltip .tooltipContent sl-button {
